used different centering css to fix scrollbar layout shift on Login & Loader when popover open.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,7 @@ main {
 }
 
 main {
+  padding-top: var(--space-3);
   padding-inline: var(--space-2);
 }
 
@@ -56,13 +57,6 @@ button {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-
-.center {
-  display: grid;
-  position: absolute;
-  place-items: center;
-  inset: 0;
 }
 
 .modal_btn {
